source/stylesheets/_service.sass
.services .content
  h2
    margin: 5rem 0 3rem
    text-align: center
    font-weight: normal
  h3
    font-size: $font-4
    margin: 1.25rem 0
    text-align: center

  .description
    text-align: center

  .wrapper
    padding: .75em 1em

  .notification
    padding: 2.5rem
    margin-top: 4rem
    text-align: center

